<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.sharekit.demo.ShareKitDemo">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

        <Button
                android:id="@+id/intent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sharekit_send"
                android:textSize="12sp" />
    </LinearLayout>

    <RadioGroup
            android:id="@+id/group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@+id/radio_text"
            android:textSize="12sp">

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sharekit_share_text"
                android:onClick="onRadioButtonSwitched"
                android:id="@+id/radio_text" />

        <RadioButton
                android:id="@+id/radio_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="onRadioButtonSwitched"
                android:text="@string/sharekit_share_files" />
    </RadioGroup>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/share_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sharekit_text_content"
                android:textSize="14sp" />

        <EditText
                android:id="@+id/sharetext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="3"
                android:minLines="3"
                android:text="@string/sharekit_text_sample"
                android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>